# wasm-app-example

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  privasys.json
install/: ovh-sgx.md
src/: lib.rs
tests/: test_wasm_functions.py
wit/: world.wit
